manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: have-i-been-stolen
  labels:
    app: have-i-been-stolen
spec:
  selector:
    matchLabels:
      app: have-i-been-stolen
  template:
    metadata:
      labels:
        app: have-i-been-stolen
    spec:
      containers:
        - name: have-i-been-stolen
          image: ghcr.io/zoomoid/have-i-been-stolen:1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 400Mi
