manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: have-i-been-stolen
  labels:
    app: have-i-been-stolen
spec:
  tls:
  - hosts:
    - haveibeenstolen.example.com
    secretName: have-i-been-stolen-tls
  rules:
  - host: haveibeenstolen.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: have-i-been-stolen
          servicePort: 80
